--- a/src/components/files-grid-viewer.less
+++ b/src/components/files-grid-viewer.less
@@ -13,6 +13,11 @@
   width: 80px;
   padding: 5px;
   position: relative;
+  border-radius: @edu-border-radius-base;
+
+  &.is-selected {
+    background-color: @edu-selection-background-color;
+  }
 
   &:hover {
     .m-box-shadow;
@@ -61,23 +66,6 @@
   max-height: 100%;
 }
 
-.FilesGridViewer-fileOverlay {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 85%;
-  border: 1px solid @edu-primary-color-light;
-  border-radius: @edu-border-radius-base;
-  background-color: @edu-selection-background-color;
-
-  &.is-visible {
-    display: block;
-  }
-}
-
 .FilesGridViewer-actions {
   cursor: pointer;
   display: none;
@@ -106,6 +94,7 @@
 
   &:hover,
   &:active {
+    .m-box-shadow-dark;
     text-decoration: none;
   }
 
