--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -150,16 +150,18 @@
 }
 
 .SectionDisplay-overlayButton {
-  .m-box-shadow-round;
+  .m-box-shadow;
+  border-radius: 50%;
   background-color: @edu-white;
   display: block;
   margin: 0 7px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  box-shadow: 0px 0px 8px @grey-7;
 
   &:hover {
+    .m-box-shadow-dark;
+    border-radius: 50%;
     background-color: @edu-white;
   }
 
