EDU-604 Streamline border radius in containers

--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -5,6 +5,7 @@
 .SectionDisplay {
   background-color: @edu-white;
   border: 1px dotted transparent;
+  border-radius: @edu-border-radius-base;
   position: relative;
   padding: @edu-content-padding;
   min-height: @section-display-min-height;
@@ -140,6 +141,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: @edu-border-radius-base;
   background-color: @edu-selection-background-color;
   opacity: 70%;
 
