--- a/src/styles/antd-style-overrides.less
+++ b/src/styles/antd-style-overrides.less
@@ -59,3 +59,8 @@
 .ant-input-affix-wrapper .ant-input {
   border-radius: 0;
 }
+
+.ant-card-actions {
+  border-bottom-right-radius: @edu-border-radius-base;
+  border-bottom-left-radius: @edu-border-radius-base;
+}
