--- a/src/components/alert.less
+++ b/src/components/alert.less
@@ -1,7 +1,7 @@
 .Alert {
   background-color: @edu-secondary-color-light;
   padding: 20px 16px;
-  border-radius: 0;
+  border-radius: @edu-border-radius-base;
   border: none;
 
   & + & {
