EDU-628 Streamline item panels in plugins

--- a/src/plugins/quick-tester/quick-tester.less
+++ b/src/plugins/quick-tester/quick-tester.less
@@ -95,3 +95,14 @@
   color: @edu-secondary-color-dark;
   margin-left: @edu-button-spacing;
 }
+
+.QuickTesterEditor-testContent {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.QuickTesterEditor-testContentLabel {
+  display: block;
+  margin-bottom: 5px;
+}
