--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -92,6 +92,7 @@
 @import '../components/storage-location.less';
 @import '../components/markdown-input.less';
 @import '../components/markdown-help.less';
+@import '../components/item-panel.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
