EDU-628 Add image inputs for question and answer

--- a/src/plugins/ear-training/ear-training.less
+++ b/src/plugins/ear-training/ear-training.less
@@ -1,21 +1,19 @@
-.EarTraining {}
+.EarTrainingDisplay {}
 
-.EarTraining-soundPlayer {
+.EarTrainingDisplay-soundPlayer {
   .m-horizontally-centered;
   max-width: @edu-breakpoint-sm;
 }
 
-.EarTraining-testWrapper {
+.EarTrainingDisplay-testWrapper {
   margin: 0 auto;
   max-width: 100%;
   text-align: center;
 }
 
-.EarTraining-buttons {
+.EarTrainingDisplay-buttons {
   margin-top: 10px;
-}
-
-.EarTraining-expandedEditorRow {
-  padding-left: 0;
-  padding-right: 0;
+  display: flex;
+  gap: @edu-controls-group-gap;
+  justify-content: center;
 }
