EDU-603 Fix typo and make cell highlight color lighter

--- a/src/plugins/table/table.less
+++ b/src/plugins/table/table.less
@@ -85,7 +85,7 @@
   }
 
   &.is-active {
-    background-color: @edu-secondary-color-light !important;
+    background-color: fade(@edu-secondary-color-light, 50%) !important;
   }
 }
 
