EDU-628 Unify plugin editors dividers

--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -91,6 +91,12 @@
   padding: @edu-content-padding 0;
 }
 
+.InteractiveMediaEditor-chapterEditorDivider {
+  margin: 0 -@edu-content-padding;
+  padding-top: 20px;
+  color: @edu-text-color;
+}
+
 .InteractiveMediaEditor-readonlyValue {
   padding-left: 10px;
 }
