EDU-628 Display images

--- a/src/plugins/ear-training/ear-training.less
+++ b/src/plugins/ear-training/ear-training.less
@@ -1,8 +1,15 @@
 .EarTrainingDisplay {}
 
+.EarTrainingDisplay-image {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+}
+
 .EarTrainingDisplay-soundPlayer {
   .m-horizontally-centered;
   max-width: @edu-breakpoint-sm;
+  margin-top: 20px;
 }
 
 .EarTrainingDisplay-testWrapper {
@@ -12,7 +19,7 @@
 }
 
 .EarTrainingDisplay-buttons {
-  margin-top: 10px;
+  margin-top: 20px;
   display: flex;
   gap: @edu-controls-group-gap;
   justify-content: center;
