EDU-630 Make all plugins work with width instead of maxWidth

--- a/src/plugins/quick-tester/quick-tester.less
+++ b/src/plugins/quick-tester/quick-tester.less
@@ -3,7 +3,7 @@
 .QuickTester {}
 
 .QuickTester-content {
-  .u-max-width-60;
+  max-width: 60%;
   margin: 0 auto;
   text-align: center;
   border: 1px solid @edu-background-color-base;
@@ -12,7 +12,7 @@
   color: @edu-text-color;
 
   @media @edu-media-phone {
-    .u-max-width-100;
+    max-width: 100%;
   }
 }
 
