EDU-628 Make answer image render in the same dimenstions as the question image

--- a/src/plugins/ear-training/ear-training.less
+++ b/src/plugins/ear-training/ear-training.less
@@ -1,7 +1,21 @@
 .EarTrainingDisplay {}
 
-.EarTrainingDisplay-image {
+.EarTrainingDisplay-questionImage {
   display: block;
+  margin: 0 auto;
+  max-width: 100%;
+
+  &.EarTrainingDisplay-questionImage--toggledOff {
+    display: none;
+
+    ~ .EarTrainingDisplay-answerImage {
+      display: block;
+    }
+  }
+}
+
+.EarTrainingDisplay-answerImage {
+  display: none;
   margin: 0 auto;
   max-width: 100%;
 }
