EDU-630 Use LESS variable instead of hard-coded value

--- a/src/plugins/diagram-net/diagram-net.less
+++ b/src/plugins/diagram-net/diagram-net.less
@@ -11,5 +11,5 @@
 .DiagramNetEditor-preview {
   max-height: 80px;
   max-width: 400px;
-  border: 1px solid #d9d9d9;
+  border: 1px solid @edu-border-color-base;
 }
