EDU-631 Remove color change efect on grid items hover

--- a/src/components/localization/country-flag-and-name.less
+++ b/src/components/localization/country-flag-and-name.less
@@ -16,6 +16,7 @@
     .CountryFlagAndName-name {
       width: 100%;
       display: block;
+      margin-top: 5px;
       text-align: center;
       line-height: unset;
     }
