EDU-631 Add pointer cursor to clickable language item

--- a/src/components/ui-language-dialog.less
+++ b/src/components/ui-language-dialog.less
@@ -11,6 +11,7 @@
 }
 
 .UiLanguageDialog-language {
+  cursor: pointer;
   padding: 10px 10px 5px 10px;
   border-radius: @edu-border-radius-base;
 
