EDU-641 Change table header background color

--- a/src/plugins/table/table.less
+++ b/src/plugins/table/table.less
@@ -1,6 +1,6 @@
 @table-plugin-cell-padding: 5px;
 @table-plugin-cell-border-color: @edu-border-color-base;
-@table-plugin-cell-header-background-color: @edu-background-color-base;
+@table-plugin-cell-header-background-color: fade(@edu-primary-color-light, 20%);
 @table-plugin-cell-body-background-color: @edu-white;
 
 .TableDisplay {
