--- a/src/components/markdown.less
+++ b/src/components/markdown.less
@@ -73,6 +73,15 @@
     font-weight: normal;
   }
 
+  hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid @edu-border-color-dark;
+    margin: 2em 0;
+    padding: 0;
+  }
+
   img,
   video,
   audio {
