EDU-647 Adjust dashboard styles slightly and add info card

--- a/src/components/news-tab.less
+++ b/src/components/news-tab.less
@@ -2,16 +2,16 @@
 @news-tab-section-content-padding: 20px;
 
 .NewsTab-activitiesHeader {
-  color: @edu-text-color;
+  .m-section-headline;
 }
 
 .NewsTab-activities {
-  padding: @news-tab-section-content-padding;
+  .m-section-content;
+}
 
-  @media @edu-media-phone {
-    padding-left: 0;
-    padding-right: 0;
-  }
+.NewsTab-info {
+  .m-info-card;
+  margin-bottom: 40px;
 }
 
 .NewsTab-activity {
