--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -180,6 +180,7 @@
 .m-info-card {
   width: 100%;
   display: block;
+  margin-bottom: 40px;
   padding: @edu-content-padding;
   color: lighten(@edu-text-color, 5%);
   border-radius: @edu-border-radius-base;
