--- a/src/components/pages/docs.less
+++ b/src/components/pages/docs.less
@@ -25,8 +25,6 @@
 }
 
 .DocsPage-action {
-  .m-box-shadow;
-  background-color: @edu-white;
   width: @edu-control-height-sm;
   height: @edu-control-height-sm;
   display: flex;
@@ -37,7 +35,9 @@
 
   &:hover,
   &:active {
+    .m-box-shadow-dark;
     text-decoration: none;
+    background-color: @edu-white;
   }
 
   &.DocsPage-action--clone {
