EDU-694 Group settings tab cards into collapsibles

--- a/src/styles/antd-style-overrides.less
+++ b/src/styles/antd-style-overrides.less
@@ -64,3 +64,12 @@
   border-bottom-right-radius: @edu-border-radius-base;
   border-bottom-left-radius: @edu-border-radius-base;
 }
+
+.ant-collapse-header-text {
+  color: @edu-text-color;
+
+  &:hover,
+  &:active {
+    color: @edu-text-color;
+  }
+}
