--- a/src/components/admin/settings-tab.less
+++ b/src/components/admin/settings-tab.less
@@ -1,14 +1,28 @@
 .SettingsTab {}
 
-.SettingsTab-card {
+.SettingsTab-collapse {
   margin-top: 30px;
 
   &:first-of-type {
     margin-top: 0;
   }
 
-  &.SettingsTab-card--danger {
+  &.SettingsTab-collapse--danger {
     border-color: @edu-error-color;
+
+    & > .ant-collapse-item {
+      border-color: @edu-error-color;
+    }
+  }
+}
+
+.SettingsTab-collapseRow {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+
+  &:last-of-type {
+    margin-bottom: 0;
   }
 }
 
