EDU-649 Show helptext button

--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -60,6 +60,7 @@
 }
 
 .SectionDisplay-actionButton {
+  color: @edu-text-color;
   margin-left: @section-display-action-button-margin;
 
   &.SectionDisplay-actionButton--edit,
