--- a/src/components/room-card.less
+++ b/src/components/room-card.less
@@ -3,6 +3,7 @@
 @room-card-header-width: @room-card-width - 3 * @room-card-padding;
 
 .RoomCard {
+  position: relative;
   width: 250px;
   height: 300px;
   display: flex;
@@ -10,10 +11,17 @@
   padding: @room-card-padding;
   border-radius: @edu-border-radius-base;
   background-color: @edu-background-color-base;
+}
 
-  &.RoomCard--disabled {
-    background-color: lighten(@edu-background-color-base, 3%);
-  }
+.RoomCard-disablingOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 50%;
+  border-radius: @edu-border-radius-base;
+  background-color: @edu-white;
 }
 
 .RoomCard-name {
@@ -62,14 +70,4 @@
 
 .RoomCard-button {
   margin-top: auto;
-
-  &:disabled {
-    background-color: @edu-background-color-base;
-    color: lighten(@edu-text-color, 10%);
-
-    &:hover {
-      background-color: @edu-background-color-base;
-      color: lighten(@edu-text-color, 10%);
-    }
-  }
 }
