EDU-661 Reorganize account and profile tabs and add account deletion button

--- a/src/components/pages/dashboard.less
+++ b/src/components/pages/dashboard.less
@@ -39,7 +39,7 @@
 }
 
 .DashboardPage-storageTabContent {
-  .m-section-content;
+  .m-section-content-narrow;
 }
 
 .DashboardPage-storageTabPlanName {
