--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -71,6 +71,8 @@
 @import '../components/tag-selector.less';
 @import '../components/sorting-selector.less';
 @import '../components/news-tab.less';
+@import '../components/account-tab.less';
+@import '../components/profile-tab.less';
 @import '../components/favorites-tab.less';
 @import '../components/admin/settings-tab.less';
 @import '../components/admin/storage-plans-tab.less';
