--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -93,6 +93,7 @@
 @import '../components/markdown-help.less';
 @import '../components/item-panel.less';
 @import '../components/room-card.less';
+@import '../components/never-scrolling-text-area.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
