--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -44,10 +44,12 @@
 @edu-disabled-color-checked: #BCBCBC;
 @edu-background-color-base: #F0F0F0;
 @edu-background-color-light: #FAFAFA;
+@edu-component-background: @edu-white;
 @edu-content-title-color: #000000;
 @edu-border-color-dark: #BCBCBC;
 @edu-border-color-base: #D9D9D9;
 @edu-border-color-light: #E8E8E8;
+@edu-border-color-active: @edu-primary-color-light;
 @edu-tooltip-text-color: @edu-white;
 @edu-tooltip-background-color: rgba(62, 82, 118, 0.75);
 @edu-success-color: #57A773;
@@ -87,6 +89,17 @@
 @edu-slider-track-background-color-hover: tint(@edu-primary-color-light, 20%);
 @edu-slider-dot-border-color: @edu-background-color-base;
 @edu-slider-dot-border-color-active: tint(@edu-primary-color-light, 20%);
+
+// // Outline
+@edu-outline-blur-size: 0;
+@edu-outline-width: 2px;
+@edu-outline-color: @edu-primary-color-dark;
+@edu-outline-fade: 20%;
+
+// Animation
+@edu-animation-duration-slow: 0.3s;
+@edu-animation-duration-base: 0.2s;
+@edu-animation-duration-fast: 0.1s;
 
 // Border radii
 @edu-border-radius-base: 8px;
