--- a/src/components/never-scrolling-text-area.less
+++ b/src/components/never-scrolling-text-area.less
@@ -2,11 +2,33 @@
   .m-control-border-base;
   background-color: @edu-component-background;
   cursor: text;
+  display: grid;
+  grid-auto-flow: row;
 
   textarea {
     border: none !important;
     outline: none !important;
     box-shadow: none !important;
+    background-color: inherit !important;
+  }
+
+  &.NeverScrollingTextArea--topAligned {
+    grid-template-rows: 0 auto 1fr;
+  }
+
+  &.NeverScrollingTextArea--centerAligned {
+    grid-template-rows: 1fr auto 1fr;
+  }
+
+  &.NeverScrollingTextArea--bottomAligned {
+    grid-template-rows: 1fr auto 0;
+  }
+
+  &.NeverScrollingTextArea--embeddable {
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
+    background-color: inherit !important;
   }
 
   &.is-disabled {
