EDU-637 Add ABC notation preview to ABC notation and ear training plugin editors

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -94,6 +94,7 @@
 @import '../components/item-panel.less';
 @import '../components/room-card.less';
 @import '../components/never-scrolling-text-area.less';
+@import '../components/input-and-preview.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
