EDU-637 Fix antd LESS overrides

--- a/src/styles/antd-variable-overrides.less
+++ b/src/styles/antd-variable-overrides.less
@@ -136,10 +136,10 @@
 // @border-style-base: solid; // style of a components border
 
 // // Outline
-@outline-blur-size: 0;
-@outline-width: 2px;
-@outline-color: @primary-color;
-@outline-fade: 20%;
+@outline-blur-size: @edu-outline-blur-size;
+@outline-width: @edu-outline-width;
+@outline-color: @edu-outline-color;
+@outline-fade: @edu-outline-fade;
 
 @background-color-light: @edu-background-color-light;
 @background-color-base: @edu-background-color-base;
