--- a/src/components/markdown-input.less
+++ b/src/components/markdown-input.less
@@ -1,18 +1,5 @@
-@markdown-input-block-min-height: 100px;
-
 .MarkdownInput {
-  width: 100%;
   display: grid;
-  gap: 5px;
-  grid-template-columns: 1fr;
-
-  &.MarkdownInput--withPreview {
-    grid-template-columns: 1fr 1fr;
-
-    @media @edu-media-phone {
-      grid-template-columns: 1fr;
-    }
-  }
 }
 
 .MarkdownInput-input {
@@ -47,21 +34,10 @@
 }
 
 .MarkdownInput-preview {
-  min-height: @markdown-input-block-min-height;
-  height: 100%;
-  padding: 4px 11px;
-  border: 1px solid @edu-border-color-base;
-  border-radius: @edu-border-radius-base;
 
   &.MarkdownInput-preview--inline {
-    overflow-x: auto;
-    min-height: unset;
+    overflow-x: hidden;
     white-space: nowrap;
-  }
-
-  &.is-disabled {
-    cursor: not-allowed;
-    color: @edu-disabled-color;
-    border-color: @edu-border-color-light;
+    text-overflow: ellipsis;
   }
 }
