EDU-637 Make preview distinguishable from a text input

--- a/src/components/input-and-preview.less
+++ b/src/components/input-and-preview.less
@@ -14,6 +14,7 @@
 
 .InputAndPreview--preview {
   .m-control-border-base;
+  background-color: @edu-background-color-light;
   padding: 4px 11px;
   display: grid;
 }
