EDU-637 Remove global textarea style

--- a/src/components/never-scrolling-text-area.less
+++ b/src/components/never-scrolling-text-area.less
@@ -6,6 +6,7 @@
   grid-auto-flow: row;
 
   textarea {
+    resize: none !important;
     border: none !important;
     outline: none !important;
     box-shadow: none !important;
