EDU-661 Support user own account deletion

--- a/src/components/account-tab.less
+++ b/src/components/account-tab.less
@@ -16,13 +16,15 @@
   }
 }
 
-.AccountTab-deleteAccountButton {
+.AccountTab-closeAccountButton {
   margin-top: 15px;
   color: @edu-white;
   background-color: @edu-error-color;
   border-color: @edu-error-color;
 
-  &:hover {
+  &:hover,
+  &:active,
+  &:visited {
     color: @edu-white;
     background-color: lighten(@edu-error-color, 8%);
     border-color: lighten(@edu-error-color, 8%);
