EDU-639 Extract collapsible component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -97,6 +97,7 @@
 @import '../components/room-card.less';
 @import '../components/never-scrolling-text-area.less';
 @import '../components/input-and-preview.less';
+@import '../components/collapsible.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
