--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -98,6 +98,7 @@
 @import '../components/never-scrolling-text-area.less';
 @import '../components/input-and-preview.less';
 @import '../components/collapsible.less';
+@import '../components/card-selector.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
