EDU-639 Add randomised tests icon

--- a/src/components/card-selector.less
+++ b/src/components/card-selector.less
@@ -1,7 +1,7 @@
 @card-selector-selected-card-background-color: lighten(@edu-primary-color-light, 35%);
 
 .CardSelector {
-  display: flex;
+  display: inline-flex;
   gap: 5px;
 }
 
