--- a/src/plugins/quick-tester/quick-tester.less
+++ b/src/plugins/quick-tester/quick-tester.less
@@ -37,7 +37,7 @@
 
 .QuickTesterDisplay-test {
   min-height: 200px;
-  padding: 5px;
+  padding: 10px;
   width: 100%;
   display: flex;
   align-items: center;
@@ -50,6 +50,11 @@
 .QuickTesterDisplay-buttons {
   display: flex;
   gap: 5px;
+}
+
+.QuickTesterDisplay-randomTestsIcon {
+  margin-left: 5px;
+  font-size: 10px;
 }
 
 .QuickTesterEditor {}
