EDU-639 Extract iteration panel

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -99,6 +99,7 @@
 @import '../components/input-and-preview.less';
 @import '../components/collapsible.less';
 @import '../components/card-selector.less';
+@import '../components/iteration-panel.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
