--- a/src/plugins/table/table.less
+++ b/src/plugins/table/table.less
@@ -26,6 +26,30 @@
   &.TableDisplay-cell--body {
     background-color: @table-plugin-cell-body-background-color;
   }
+
+  &.TableDisplay-cell--verticalAlignmentTop {
+    vertical-align: top;
+  }
+
+  &.TableDisplay-cell--verticalAlignmentMiddle {
+    vertical-align: middle;
+  }
+
+  &.TableDisplay-cell--verticalAlignmentBottom {
+    vertical-align: bottom;
+  }
+
+  &.TableDisplay-cell--horizontalAlignmentLeft {
+    text-align: left;
+  }
+
+  &.TableDisplay-cell--horizontalAlignmentCenter {
+    text-align: center;
+  }
+
+  &.TableDisplay-cell--horizontalAlignmentRight {
+    text-align: right;
+  }
 }
 
 .TableEditor {}
