EDU-667 Change text to copyrightNotice in anavis plugin

--- a/src/plugins/anavis/anavis.less
+++ b/src/plugins/anavis/anavis.less
@@ -69,7 +69,7 @@
   margin-top: 0.5em;
 }
 
-.AnavisDisplay-text {
+.AnavisDisplay-copyrightNotice {
   padding-top: 20px;
   font-size: 12px;
   text-align: center;
