EDU-667 Rename text to copyrightNotice in all plugins

--- a/src/plugins/audio/audio.less
+++ b/src/plugins/audio/audio.less
@@ -5,7 +5,7 @@
   max-width: @edu-breakpoint-sm;
 }
 
-.AudioDisplay-text {
+.AudioDisplay-copyrightNotice {
   padding-top: 20px;
   font-size: 12px;
   text-align: center;
