--- a/src/plugins/video/video.less
+++ b/src/plugins/video/video.less
@@ -4,7 +4,7 @@
   margin: 0 auto;
 }
 
-.VideoDisplay-text {
+.VideoDisplay-copyrightNotice {
   padding-top: 20px;
   font-size: 12px;
   text-align: center;
