--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -100,6 +100,7 @@
 @import '../components/collapsible.less';
 @import '../components/card-selector.less';
 @import '../components/iteration-panel.less';
+@import '../components/copyright-notice.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
