EDU-665 Set up raw upload overview

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -100,7 +100,7 @@
 @import '../components/iteration-panel.less';
 @import '../components/copyright-notice.less';
 @import '../components/abc-notation.less';
-
+@import '../components/files-upload-overview.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
