--- a/src/components/storage-location.less
+++ b/src/components/storage-location.less
@@ -41,19 +41,19 @@
   margin-bottom: 20px;
 }
 
-.StorageLocation-wizardScreen {
+.StorageLocation-screen {
   display: flex;
   flex-direction: column;
   background-color: @edu-white;
 }
 
-.StorageLocation-wizardScreenBack {
+.StorageLocation-screenBack {
   display: flex;
   gap: 5px;
   align-items: center;
   margin-bottom: 20px;
 }
 
-.StorageLocation-wizardScreenSelect {
+.StorageLocation-screenSelect {
   margin: 30px 0 0 auto;
 }
