EDU-665 Change fullscreen styling to keep height constant without breaking grid/list scrolling

--- a/src/components/storage-location.less
+++ b/src/components/storage-location.less
@@ -42,6 +42,11 @@
 }
 
 .StorageLocation-screen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   background-color: @edu-white;
