--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,6 +1,5 @@
 // Library imports
 @import 'antd/dist/antd.less';
-@import (less) 'abcjs/abcjs-midi.css';
 @import 'flag-icon-css/less/flag-icon.less';
 @import (less) 'react-piano/dist/styles.css';
 
@@ -9,7 +8,6 @@
 
 // Shared educandu styles and variables
 @import './global-variables.less';
-@import './fontawesome.less';
 @import './utilities.less';
 @import './elements.less';
 @import './mixins.less';
@@ -97,6 +95,7 @@
 @import '../components/room-card.less';
 @import '../components/never-scrolling-text-area.less';
 @import '../components/input-and-preview.less';
+@import '../components/abc-notation.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
