EDU-665 Show used storage and fix UI issues

--- a/src/components/files-upload-overview.less
+++ b/src/components/files-upload-overview.less
@@ -1,11 +1,18 @@
-.FilesUploadOverview {}
+.FilesUploadOverview {
+  height: 100%;
+}
 
 .FilesUploadOverview-headline {
-  margin: 20px 0;
+  margin-bottom: 30px;
+}
+
+.FilesUploadOverview-usedStorage {
+  margin-bottom: 20px;
 }
 
 .FilesUploadOverview-fileStatus {
-  margin: 15px;
+  padding: 0 15px;
+  margin-bottom: 15px;
 }
 
 .FilesUploadOverview-fileStatusRow {
@@ -20,6 +27,7 @@
 }
 
 .FilesUploadOverview-fileStatusContainer {
+  height: 70%;
   overflow: scroll;
 }
 
